<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_280sdp"
    android:layout_height="@dimen/_120sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_2sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:fontFamily="@font/open_sans_semibold"
                android:gravity="center"
                android:text="@string/newSearchDialog"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/stayBtn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/btn_shape"
                android:backgroundTint="@color/colorPrimaryDark"
                android:paddingStart="@dimen/_4sdp"
                android:paddingEnd="@dimen/_4sdp"
                android:text="@string/oldSearch"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <Button
                android:id="@+id/newBtn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/btn_shape"
                android:backgroundTint="@color/red2"
                android:text="@string/newSearch"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.783"
                app:layout_constraintStart_toEndOf="@+id/stayBtn"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>