<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_240sdp"
    android:layout_height="@dimen/_280sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_1sdp"
        app:cardCornerRadius="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_35sdp"
                app:cardCornerRadius="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" >

                <EditText
                    android:id="@+id/movieQuery"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:ems="10"
                    android:hint="Movie Name"
                    android:inputType="textPersonName"
                    android:paddingStart="@dimen/_4sdp"
                    android:paddingEnd="@dimen/_4sdp"
                    android:textSize="@dimen/_10sdp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_55sdp"
                android:fontFamily="@font/advent_pro_medium"
                android:text="@string/searchForMovie"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="@+id/cardView3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/cardView3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/advent_pro_medium"
                android:text="@string/searchForTv"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="@+id/cardView4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/cardView4"
                app:layout_constraintTop_toBottomOf="@+id/cardView3" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_35sdp"
                app:cardCornerRadius="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="@+id/cardView3"
                app:layout_constraintStart_toStartOf="@+id/cardView3"
                app:layout_constraintTop_toBottomOf="@+id/textView6" >

                <EditText
                    android:id="@+id/TvQuery"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:ems="10"
                    android:hint="Tv Show Name"
                    android:inputType="textPersonName"
                    android:paddingStart="@dimen/_4sdp"
                    android:paddingEnd="@dimen/_4sdp"
                    android:textSize="@dimen/_10sdp" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/searchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape1"
                android:text="@string/searchBtn"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView4" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        app:cardCornerRadius="@dimen/_40sdp"
        app:cardElevation="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/search_icon" />
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>